  *) prefork: Update MPM state in children during a graceful restart.        Allow the HTTP connection handling loop to terminate early             during a graceful restart.  PR 41743.                  [Andrew Punch <andrew.punch 247realmedia.com>]

git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.2.x@1069428 13f79535-47bb-0310-9956-ffa450edef68